tests/auto/qml/qqmlecmascript/data/bindingNoEvaluationIfObjectGone.qml
@@ -1,0 +1,9 @@
+import QtQml
+
+QtObject {
+    id: root
+    property int x: 42
+    property QtObject obj: QtObject {
+        property int y: root.x
+    }
+}
